Minor alignment fix

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -120,7 +120,6 @@ body {
     left: 0;
     bottom: 0;
     width: 22rem;
-    text-align: left;
   }
 }
 
